Started styling the component in tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -7,55 +7,57 @@
     <title>Document</title>
   </head>
   <body>
-    <main class="bg-fuchsia-100 h-screen">
-      <div class="main-box bg-blue-400 container mx-auto max-w-2xl">
-        <section class="header-section">
+    <main class="bg-fuchsia-100 h-screen flex items-center justify-center">
+      <div
+        class="main-box bg-white container mx-auto max-w-2xl shadow-md rounded-2xl p-12"
+      >
+        <section class="header-section flex">
           <img src="../assets/images/icon-star.svg" />
           <h1>FAQs</h1>
         </section>
         <section content-section>
-          <div class="content-box _1">
-            <div class="question-box">
-              <h1>What is Frontend Mentor, and how will it help me?</h1>
+          <div class="content-box _1 pt-6">
+            <div class="question-box flex justify-between">
+              <h2>What is Frontend Mentor, and how will it help me?</h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p>
+            <p class="hidden">
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
               HTML, CSS, and JavaScript. It's suitable for all levels and ideal
               for portfolio building.
             </p>
           </div>
-          <div class="content-box _1">
-            <div class="question-box">
-              <h1>Is Frontend Mentor free?</h1>
+          <div class="content-box _1 pt-6">
+            <div class="question-box flex justify-between">
+              <h2>Is Frontend Mentor free?</h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p>
+            <p class="hidden">
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
               projects suitable for all skill levels.
             </p>
           </div>
-          <div class="content-box _1">
-            <div class="question-box">
-              <h1>Can I use Frontend Mentor projects in my portfolio?</h1>
+          <div class="content-box _1 pt-6">
+            <div class="question-box flex justify-between">
+              <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p>
+            <p class="hidden">
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
               potential employers!
             </p>
           </div>
-          <div class="content-box _1">
-            <div class="question-box">
-              <h1>
+          <div class="content-box _1 pt-6">
+            <div class="question-box flex justify-between">
+              <h2>
                 How can I get help if I'm stuck on a Frontend Mentor challenge?
-              </h1>
+              </h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p>
+            <p class="hidden">
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
               seek support from other community members.
@@ -69,8 +71,8 @@
 
 <!-- Useful notes -->
 <!-- 
-i have added a dev script to the package.json which should automatically
-rebuild the app on any changes i make. Not sure if it is working correctly as
-i have to reload the browser when i make changes. This could very well be how its supposed 
-to work though
- -->
+    i have added a dev script to the package.json which should automatically
+    rebuild the app on any changes i make. Not sure if it is working correctly as
+    i have to reload the browser when i make changes. This could very well be how its supposed 
+    to work though
+  -->
