--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./output.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="font-customFont">
     <main class="bg-fuchsia-100 h-screen flex items-center justify-center">
       <div
         class="main-box bg-white container mx-auto max-w-2xl shadow-md rounded-2xl p-12"
       >
-        <section class="header-section flex">
+        <section class="header-section flex items-center">
           <img src="../assets/images/icon-star.svg" />
-          <h1>FAQs</h1>
+          <h1 class="ml-5 text-5xl font-bold">FAQs</h1>
         </section>
         <section content-section>
           <div class="content-box _1 pt-6">
             <div class="question-box flex justify-between">
-              <h2>What is Frontend Mentor, and how will it help me?</h2>
+              <h2 class="font-semibold">
+                What is Frontend Mentor, and how will it help me?
+              </h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p class="hidden">
+            <p class="hidden text-gray-400">
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
               HTML, CSS, and JavaScript. It's suitable for all levels and ideal
@@ -30,10 +38,10 @@
           </div>
           <div class="content-box _1 pt-6">
             <div class="question-box flex justify-between">
-              <h2>Is Frontend Mentor free?</h2>
+              <h2 class="font-semibold">Is Frontend Mentor free?</h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p class="hidden">
+            <p class="hidden text-gray-400">
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
               projects suitable for all skill levels.
@@ -41,10 +49,12 @@
           </div>
           <div class="content-box _1 pt-6">
             <div class="question-box flex justify-between">
-              <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+              <h2 class="font-semibold">
+                Can I use Frontend Mentor projects in my portfolio?
+              </h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p class="hidden">
+            <p class="hidden text-gray-400">
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
               potential employers!
@@ -52,12 +62,12 @@
           </div>
           <div class="content-box _1 pt-6">
             <div class="question-box flex justify-between">
-              <h2>
+              <h2 class="font-semibold">
                 How can I get help if I'm stuck on a Frontend Mentor challenge?
               </h2>
               <img src="../assets/images/icon-plus.svg" />
             </div>
-            <p class="hidden">
+            <p class="hidden text-gray-400">
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
               seek support from other community members.
