--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
               <h2 class="font-semibold">
                 What is Frontend Mentor, and how will it help me?
               </h2>
-              <img src="../assets/images/icon-plus.svg" />
+              <button><img src="../assets/images/icon-plus.svg" /></button>
             </div>
             <p class="hidden text-gray-400">
               Frontend Mentor offers realistic coding challenges to help
@@ -39,7 +39,7 @@
           <div class="content-box _1 pt-6">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">Is Frontend Mentor free?</h2>
-              <img src="../assets/images/icon-plus.svg" />
+              <button><img src="../assets/images/icon-plus.svg" /></button>
             </div>
             <p class="hidden text-gray-400">
               Yes, Frontend Mentor offers both free and premium coding
@@ -52,7 +52,7 @@
               <h2 class="font-semibold">
                 Can I use Frontend Mentor projects in my portfolio?
               </h2>
-              <img src="../assets/images/icon-plus.svg" />
+              <button><img src="../assets/images/icon-plus.svg" /></button>
             </div>
             <p class="hidden text-gray-400">
               Yes, you can use projects completed on Frontend Mentor in your
@@ -65,7 +65,7 @@
               <h2 class="font-semibold">
                 How can I get help if I'm stuck on a Frontend Mentor challenge?
               </h2>
-              <img src="../assets/images/icon-plus.svg" />
+              <button><img src="../assets/images/icon-plus.svg" /></button>
             </div>
             <p class="hidden text-gray-400">
               The best place to get help is inside Frontend Mentor's Discord
@@ -76,6 +76,7 @@
         </section>
       </div>
     </main>
+    <script src="../src/index.js"></script>
   </body>
 </html>
 
