Added some hr elements between the content

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
           <img src="../assets/images/icon-star.svg" />
           <h1 class="ml-5 text-5xl font-bold">FAQs</h1>
         </section>
-        <section content-section>
-          <div class="content-box _1 pt-6">
+        <section class="pt-4">
+          <div class="content-box _1 pt-3">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">
                 What is Frontend Mentor, and how will it help me?
@@ -36,7 +36,8 @@
               for portfolio building.
             </p>
           </div>
-          <div class="content-box _1 pt-6">
+          <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+          <div class="content-box _1 pt-3">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">Is Frontend Mentor free?</h2>
               <button><img src="../assets/images/icon-plus.svg" /></button>
@@ -47,7 +48,8 @@
               projects suitable for all skill levels.
             </p>
           </div>
-          <div class="content-box _1 pt-6">
+          <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+          <div class="content-box _1 pt-3">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">
                 Can I use Frontend Mentor projects in my portfolio?
@@ -60,7 +62,8 @@
               potential employers!
             </p>
           </div>
-          <div class="content-box _1 pt-6">
+          <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+          <div class="content-box _1 pt-3">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">
                 How can I get help if I'm stuck on a Frontend Mentor challenge?
