Added the js logic

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,11 @@
               <h2 class="font-semibold">
                 What is Frontend Mentor, and how will it help me?
               </h2>
-              <button><img src="../assets/images/icon-plus.svg" /></button>
+              <button id="button">
+                <img src="../assets/images/icon-plus.svg" />
+              </button>
             </div>
-            <p class="hidden text-gray-400">
+            <p id="para1" class="hidden text-gray-400">
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
               HTML, CSS, and JavaScript. It's suitable for all levels and ideal
@@ -40,9 +42,11 @@
           <div class="content-box _1 pt-3">
             <div class="question-box flex justify-between">
               <h2 class="font-semibold">Is Frontend Mentor free?</h2>
-              <button><img src="../assets/images/icon-plus.svg" /></button>
+              <button id="button">
+                <img src="../assets/images/icon-plus.svg" />
+              </button>
             </div>
-            <p class="hidden text-gray-400">
+            <p id="para2" class="hidden text-gray-400">
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
               projects suitable for all skill levels.
@@ -54,9 +58,11 @@
               <h2 class="font-semibold">
                 Can I use Frontend Mentor projects in my portfolio?
               </h2>
-              <button><img src="../assets/images/icon-plus.svg" /></button>
+              <button id="button">
+                <img src="../assets/images/icon-plus.svg" />
+              </button>
             </div>
-            <p class="hidden text-gray-400">
+            <p id="para3" class="hidden text-gray-400">
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
               potential employers!
@@ -68,9 +74,11 @@
               <h2 class="font-semibold">
                 How can I get help if I'm stuck on a Frontend Mentor challenge?
               </h2>
-              <button><img src="../assets/images/icon-plus.svg" /></button>
+              <button onClick="getButtonId(index)" id="button">
+                <img src="../assets/images/icon-plus.svg" />
+              </button>
             </div>
-            <p class="hidden text-gray-400">
+            <p id="para4" class="hidden text-gray-400">
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
               seek support from other community members.
